--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,12 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 60px;
   pointer-events: none;
+  align-items: flex-end;
+  float: right;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,11 +17,10 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 50%;
+  height: 60px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
   padding-bottom: 10px;
@@ -36,4 +37,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Site-title{
+  padding-left: 1%;
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
 }
